fix date right alignment

--- a/res/globals.css
+++ b/res/globals.css
@@ -91,13 +91,13 @@ p > img {
     margin-left: 2%;
     font-size: small;
     line-height: 1.5em;
+    flex-grow: 1;
 }
 
 .card > p {
     text-align: right;
     font-size: small;
-    padding-left: 2.5%;
-    margin-right: 1%;
+    margin-left: auto;
 }
 
 #socials {
